- A lot of details on the chips used. Datasheets added as Backup. Specs added, to be completed. More pictures with clearer view on chips. Added Parrot MINIDRONES BATTERY CHARGER PCB Picture and details on chip used to charge LiPo.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.plf filter=lfs diff=lfs merge=lfs -text
 *.raw filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
